fix(category-picker): vertical alignment of labels/folders icon

--- a/internal_packages/category-picker/stylesheets/category-picker.less
+++ b/internal_packages/category-picker/stylesheets/category-picker.less
@@ -43,10 +43,12 @@ body.platform-win32 {
     top: 2px;
   }
 
-  img.content-mask {
-    position: relative;
-    top:3px;
-    background-color: @text-color-subtle;
+  .item {
+    img.content-mask {
+      position: relative;
+      top:3px;
+      background-color: @text-color-subtle;
+    }
   }
   .item.selected, .item.active {
     img.content-mask {
